<resources>
    <string name="app_name">MUMAndroidAssignment</string>
    <string name="input_lbs">Input(LBs)</string>
    <string name="output_kgs">Output(KGs)</string>
    <string name="convert">CONVERT</string>
    <string name="add_new_food">add new food...</string>
    <string name="add_food">ADD FOOD</string>
    <string name="decide">DECIDE!</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="emall_address_required">Emall address(required)</string>
    <string name="password_required">Password(required)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="title_activity_shopping">ShoppingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>