<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.mumandroidassignment.lesson3.Question1ByKotlin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_lbs"/>
    
    <EditText
        android:id="@+id/ed_lbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output_kgs"/>

    <EditText
        android:id="@+id/ed_kgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:onClick="convert"/>


</LinearLayout>
