<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson4.bykotlin.ui.LoginActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/sign_in_to_your_account"
        android:textSize="26sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/border"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emall_address_required" />

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/password_required" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:background="@drawable/border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="155dp"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:onClick="login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="30dp"
                android:layout_height="1px"
                android:layout_weight="0.25"
                android:background="#33000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/don_t_have_an_account" />

            <View
                android:layout_width="30dp"
                android:layout_height="1px"
                android:layout_weight="0.25"
                android:background="#33000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:autoLink="all"
            android:clickable="true"
            android:gravity="center"
            android:onClick="goToCreateAccount"
            android:textColor="@android:color/holo_blue_bright"
            android:text="@string/create_a_new_account" />


    </RelativeLayout>


</RelativeLayout>
