<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.mumandroidassignment.lesson3.Question2ByKotlin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_dish_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/ed_add_food"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/add_new_food" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="addFood"
            android:text="@string/add_food"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="decide"
        android:text="@string/decide" />

</RelativeLayout>


